@@ -6,6 +6,10 @@
 
 . $srcdir/defs
 
+# Require GNU make for this test.  SunOS Make does not support
+# `$$' in a target or a dependency (it outputs the empty string instead).
+$needs_gnu_make
+
 set -e
 
 echo AC_OUTPUT >> configure.in
@@ -14,12 +18,11 @@ cat > Makefile.am <<'EOF'
 mydir = $(prefix)/my
 dist_my_DATA = hello$$world
 
-hello$$world:
-	touch '$@'
-
 check-dist: distdir
 	test -f '$(distdir)/hello$$world'
 EOF
+
+: > 'hello$$world'
 
 $ACLOCAL
 $AUTOCONF
