@@ -23,16 +23,14 @@ END
 
 touch bar.in
 
-# Since we don't require Yacc, make sure it's not used.
-export YACC=false
-
 $ACLOCAL
 $AUTOCONF
 $AUTOMAKE
 
 test -d autom4te.cache
 
-./configure
+# Since we don't require Yacc, make sure it's not used.
+./configure YACC=false
 test -f bar
 
 $MAKE
