@@ -1,5 +1,11 @@
 2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* tests/dollar.test: Require GNU make.
+	* tests/maintclean.test: Don't use `export YACC=false'.  Pass
+	YACC=false to configure instead.
+
+2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
 	* lib/config.guess, lib/config.sub, lib/texinfo.tex, lib/INSTALL,
 	INSTALL: New upstream versions.
 
